dl_report template: added page buttons to the stratacheck table

--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -302,7 +302,7 @@ DT::datatable(
   extensions = "Buttons",
   options = 
     list(
-      dom = "Bfrti",
+      dom = "Bfrtip",
       buttons = c("csv", "excel", "pdf"))
   )
 ```
